--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,5 +7,11 @@
 </head>
 <body>
     <h1>Home Page</h1>
+
+    {% for post in posts %}
+      <h2>{{ post.title }}</h2>
+      <p>By {{ post.author }} on {{ post.date_posted }}</p>
+      <p>{{ post.content }}</p>
+    {% endfor %}
 </body>
 </html>
