Part 2 - if statement in templates (its basic jinja, the same as Django template)

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Document</title>
+    {% if title %}
+        <title>Flask Blog - {{ title }}</title>
+    {% else %}
+        <title>Flask Blog</title>
+    {% endif %}
 </head>
 <body>
     <h1>Home Page</h1>
