--- a/templates/about.html
+++ b/templates/about.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        {% if title %}
-            <title>Flask Blog - {{ title }}</title>
-        {% else %}
-            <title>Flask Blog</title>
-        {% endif %}
-    </head>
-<body>
-    <h1>About Page</h1>
-</body>
-</html>Document
+{% extends "layout.html" %}
+{% block content %}
+<h1>About Page</h1>
+{% endblock content %}
