--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    {% if title %}
-        <title>Flask Blog - {{ title }}</title>
-    {% else %}
-        <title>Flask Blog</title>
-    {% endif %}
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
     <h1>Home Page</h1>
 
     {% for post in posts %}
@@ -17,5 +7,4 @@
       <p>By {{ post.author }} on {{ post.date_posted }}</p>
       <p>{{ post.content }}</p>
     {% endfor %}
-</body>
-</html>
+{% endblock content %}
