--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -8,7 +8,7 @@
         <p class="text-secondary">{{ current_user.email }}</p>
       </div>
     </div>
-        <form method="POST" action="">
+        <form method="POST" action="" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Account Info</legend>
@@ -30,13 +30,22 @@
                     {{ form.email.label(class="form-control-label") }}
                     {% if form.email.errors %}
                         {{ form.email(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.email.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
+                        {% for error in form.email.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
                     {% else %}
                         {{ form.email(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ form.picture.label() }}
+                    {{ form.picture(class="form-control-file") }}
+                    {% if form.picture.errors %}
+                        <div class="invalid-feedback">
+                            {% for error in form.picture.errors %}
+                                    <span>{{ error }}</span> </br>
+                            {% endfor %}
+                        </div>
                     {% endif %}
                 </div>
             </fieldset>
