--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h1>Home Page</h1>
 
-    {% for post in posts %}
+    {% for post in posts.items %}
       <article class="media content-section">
         <img src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}" alt="" class="rounded-circle article-img">
         <div class="media-body">
