--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
-  <div class="content-section">
-    <div class="media">
-      <img class="rounded-circle account-img" src="{{ image_file }}">
-      <div class="media-body">
-        <h2 class="account-heading">{{ current_user.username }}</h2>
-        <p class="text-secondary">{{ current_user.email }}</p>
+    <div class="content-section">
+      <div class="media">
+        <img class="rounded-circle account-img" src="{{ image_file }}">
+        <div class="media-body">
+          <h2 class="account-heading">{{ current_user.username }}</h2>
+          <p class="text-secondary">{{ current_user.email }}</p>
+        </div>
       </div>
-    </div>
         <form method="POST" action="" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
@@ -30,9 +30,11 @@
                     {{ form.email.label(class="form-control-label") }}
                     {% if form.email.errors %}
                         {{ form.email(class="form-control form-control-lg is-invalid") }}
-                        {% for error in form.email.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
                     {% else %}
                         {{ form.email(class="form-control form-control-lg") }}
                     {% endif %}
@@ -41,11 +43,9 @@
                     {{ form.picture.label() }}
                     {{ form.picture(class="form-control-file") }}
                     {% if form.picture.errors %}
-                        <div class="invalid-feedback">
-                            {% for error in form.picture.errors %}
-                                    <span>{{ error }}</span> </br>
-                            {% endfor %}
-                        </div>
+                        {% for error in form.picture.errors %}
+                            <span class="text-danger">{{ error }}</span></br>
+                        {% endfor %}
                     {% endif %}
                 </div>
             </fieldset>
@@ -53,5 +53,5 @@
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
         </form>
-  </div>
+    </div>
 {% endblock content %}
